syntax = "proto3";

package personaappapi;

option java_package = "online.personaapp.auth";
option java_outer_classname = "PersonaAppAuth";

import public "auth.proto";
import public "company.proto";

service PersonaApp {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Logout (LogoutRequest) returns (LogoutResponse);
    rpc Refresh (RefreshRequest) returns (RefreshResponse);
    rpc UpdateCompany (UpdateCompanyRequest) returns (UpdateCompanyResponse);
    rpc GetCompany (GetCompanyRequest) returns (GetCompanyResponse);
}